force-app/main/default/objects/Contact/fields/aos_Adopter__c.field-meta.xml
<CustomField>
    <fullName>aos_Adopter__c</fullName>
    <formula>IF(ISBLANK(aos_Adoption_Transactions__c), &quot;NULL&quot;,
IF(aos_Adoption_Transactions__c = 1, &quot;Yes&quot;,
IF(aos_Adoption_Transactions__c = 0, &quot;No&quot;,
IF(aos_Adoption_Transactions__c &gt; 1, &quot;Repeat&quot;, NULL)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopter</label>
    <type>Text</type>
</CustomField>