force-app/main/default/objects/Contact/fields/aos_Adopter_Tags__c.field-meta.xml
<CustomField>
    <fullName>aos_Adopter_Tags__c</fullName>
    <label>Adopter Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cannot be left for long periods</fullName>
            </value>
            <value>
                <fullName>Dietary</fullName>
            </value>
            <value>
                <fullName>Experienced Owner</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>No Animals of different species</fullName>
            </value>
            <value>
                <fullName>No Animals of same species</fullName>
            </value>
            <value>
                <fullName>No Children</fullName>
            </value>
            <value>
                <fullName>Rural Area</fullName>
            </value>
            <value>
                <fullName>Secure Garden</fullName>
            </value>
            <value>
                <fullName>Specialist Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>