force-app/main/default/objects/Contact/fields/aos_Adoption__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption__c</fullName>
    <label>Adoption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adopt</fullName>
            </value>
            <value>
                <fullName>Do Not Adopt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>