force-app/main/default/objects/Contact/fields/aos_Adoption_Count__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Count__c</fullName>
    <label>Adoption Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>