force-app/main/default/objects/Contact/fields/aos_Adoption_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Reason__c</fullName>
    <label>Adoption Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>