force-app/main/default/objects/Contact/fields/aos_Adoption_Transactions__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Transactions__c</fullName>
    <label>Adoption Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>