force-app/main/default/objects/Contact/fields/aos_Adoptions_Last_5_Years__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoptions_Last_5_Years__c</fullName>
    <label>Adoptions Last 5 Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>