force-app/main/default/objects/Contact/fields/aos_Adoptions_This_Year__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoptions_This_Year__c</fullName>
    <label>Adoptions This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>