force-app/main/default/objects/Contact/fields/aos_Animals_Adopted__c.field-meta.xml
<CustomField>
    <fullName>aos_Animals_Adopted__c</fullName>
    <label>Animals Adopted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>