force-app/main/default/objects/Contact/fields/aos_Do_Not_Adopt_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Do_Not_Adopt_Reason__c</fullName>
    <label>Do Not Adopt Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POI subject of existing or ongoing investigation</fullName>
            </value>
            <value>
                <fullName>Prohibition Order</fullName>
            </value>
            <value>
                <fullName>Concerns for welfare of animals in their care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>