force-app/main/default/objects/Contact/fields/aos_Do_Not_Allow_Adoptions__c.field-meta.xml
<CustomField>
    <fullName>aos_Do_Not_Allow_Adoptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a POI where Adoptions should not be able to proceed.</description>
    <label>Do Not Allow Adoptions</label>
    <type>Checkbox</type>
</CustomField>