force-app/main/default/objects/Contact/fields/aos_First_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_First_Adoption_Date__c</fullName>
    <label>First Adoption Date</label>
    <type>Date</type>
</CustomField>