force-app/main/default/objects/Contact/fields/aos_Foster__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster__c</fullName>
    <label>Foster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foster</fullName>
            </value>
            <value>
                <fullName>Do Not Foster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>