force-app/main/default/objects/Contact/fields/aos_Foster_Animal_Count_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Animal_Count_Last_Month__c</fullName>
    <label>Foster Animal Count Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>