force-app/main/default/objects/Contact/fields/aos_Foster_Carer__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Carer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foster Carer</label>
    <type>Checkbox</type>
</CustomField>