force-app/main/default/objects/Contact/fields/aos_Foster_Days_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Days_Last_Year__c</fullName>
    <label>Foster Days Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>