force-app/main/default/objects/Contact/fields/aos_Foster_Level__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foster Level</label>
    <referenceTo>npsp__Level__c</referenceTo>
    <relationshipLabel>Contacts (Foster Level)</relationshipLabel>
    <relationshipName>Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>