force-app/main/default/objects/Contact/fields/aos_Foster_Location_Parent__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Location_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foster Location Parent</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>