force-app/main/default/objects/Contact/fields/aos_Foster_Notes__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Notes__c</fullName>
    <label>Foster Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>