force-app/main/default/objects/Contact/fields/aos_Foster_Parent_Completed_Training__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Parent_Completed_Training__c</fullName>
    <label>Foster Parent Completed Training</label>
    <type>Date</type>
</CustomField>