force-app/main/default/objects/Contact/fields/aos_Foster_Preferences__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Preferences__c</fullName>
    <label>Foster Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>