force-app/main/default/objects/Contact/fields/aos_Fostering_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Fostering_Details__c</fullName>
    <label>Fostering Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doggie Day Out</fullName>
            </value>
            <value>
                <fullName>Neonate Kitten Program</fullName>
            </value>
            <value>
                <fullName>Pillow Paws</fullName>
            </value>
            <value>
                <fullName>School Holidays Only</fullName>
            </value>
            <value>
                <fullName>Emergency Bushfire Relief Fostering</fullName>
            </value>
            <value>
                <fullName>New Foster</fullName>
            </value>
            <value>
                <fullName>RSPCA ACT Staff</fullName>
            </value>
            <value>
                <fullName>Special Foster Parent</fullName>
            </value>
            <value>
                <fullName>Experienced Foster</fullName>
            </value>
            <value>
                <fullName>One Off Foster</fullName>
            </value>
            <value>
                <fullName>RSPCA ACT Volunteer</fullName>
            </value>
            <value>
                <fullName>Trial Adoption Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>