force-app/main/default/objects/Contact/fields/aos_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Full_Address__c</fullName>
    <formula>IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp;
IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp;
IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp;
IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>