force-app/main/default/objects/Contact/fields/aos_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_ID_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>