force-app/main/default/objects/Contact/fields/aos_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>Car Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>