force-app/main/default/objects/Contact/fields/aos_Last_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Last_Adoption_Date__c</fullName>
    <label>Last Adoption Date</label>
    <type>Date</type>
</CustomField>