force-app/main/default/objects/Contact/fields/aos_Last_Adoption_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Last_Adoption_Transaction_Status__c</fullName>
    <formula>IF(
aos_Last_Adoption_Date__c = TODAY() - 1,
&quot;New&quot;,
IF(
AND(
aos_Last_Adoption_Date__c &lt; TODAY(),
aos_Last_Adoption_Date__c &gt;= DATE(YEAR(TODAY()) - 1, MONTH(TODAY()), DAY(TODAY()))
),
&quot;Recent&quot;,
IF(
aos_Last_Adoption_Date__c &lt; TODAY() - 365,
&quot;Lapsed&quot;,
&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Adoption Transaction Status</label>
    <type>Text</type>
</CustomField>