force-app/main/default/objects/Contact/fields/aos_LGA__c.field-meta.xml
<CustomField>
    <fullName>aos_LGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Local Government Area the Contact sits within (based on the Mailing Postcode).</description>
    <inlineHelpText>The Local Government Area the Contact sits within (based on the Mailing Postcode).</inlineHelpText>
    <label>LGA</label>
    <referenceTo>aos_LGA__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>