force-app/main/default/objects/Contact/fields/aos_PHN__c.field-meta.xml
<CustomField>
    <fullName>aos_PHN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Health Network the Contact sits within (based on the Mailing Postcode).</description>
    <inlineHelpText>The Primary Health Network the Contact sits within (based on the Mailing Postcode).</inlineHelpText>
    <label>PHN</label>
    <referenceTo>aos_PHN__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>