force-app/main/default/objects/Contact/fields/aos_Program_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Program_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Contact</label>
    <type>Checkbox</type>
</CustomField>